@@ -50,8 +50,9 @@ usage: valgrind [options] prog-and-args
     --error-exitcode=<number> exit code to return if errors found [0=disable]
     --error-markers=<begin>,<end> add lines with begin/end markers before/after
                               each error output in plain text mode [none]
-    --show-error-list=no|yes  show detected errors list and
-                              suppression counts at exit [no]
+    --show-error-list=no|yes|all  show detected errors list and
+                              suppression counts at exit [no].
+                              all means to also print suppressed errors.
     -s                        same as --show-error-list=yes
     --keep-debuginfo=no|yes   Keep symbols etc for unloaded code [no]
                               This allows saved stack traces (e.g. memory leaks)
